@@ -21,6 +21,7 @@ package name.fraser.neil.plaintext;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -83,7 +84,7 @@ public class diff_match_patch {
   /**
    * The number of bits in an int.
    */
-  private short Match_MaxBits = 32;
+  private final short Match_MaxBits = 32;
 
   /**
    * Internal class for returning results from diff_linesToChars().
@@ -550,7 +551,7 @@ public class diff_match_patch {
       line = text.substring(lineStart, lineEnd + 1);
 
       if (lineHash.containsKey(line)) {
-        chars.append(String.valueOf((char) (int) lineHash.get(line)));
+        chars.append((char) (int) lineHash.get(line));
       } else {
         if (lineArray.size() == maxLines) {
           // Bail out at 65535 because
@@ -560,7 +561,7 @@ public class diff_match_patch {
         }
         lineArray.add(line);
         lineHash.put(line, lineArray.size() - 1);
-        chars.append(String.valueOf((char) (lineArray.size() - 1)));
+        chars.append((char) (lineArray.size() - 1));
       }
       lineStart = lineEnd + 1;
     }
@@ -1039,9 +1040,9 @@ public class diff_match_patch {
   }
 
   // Define some regex patterns for matching boundaries.
-  private Pattern BLANKLINEEND
+  private final Pattern BLANKLINEEND
       = Pattern.compile("\\n\\r?\\n\\Z", Pattern.DOTALL);
-  private Pattern BLANKLINESTART
+  private final Pattern BLANKLINESTART
       = Pattern.compile("\\A\\r?\\n\\r?\\n", Pattern.DOTALL);
 
   /**
@@ -1440,14 +1441,9 @@ public class diff_match_patch {
     for (Diff aDiff : diffs) {
       switch (aDiff.operation) {
       case INSERT:
-        try {
-          text.append("+").append(URLEncoder.encode(aDiff.text, "UTF-8")
+          text.append("+").append(URLEncoder.encode(aDiff.text, StandardCharsets.UTF_8)
                                             .replace('+', ' ')).append("\t");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
-        }
-        break;
+          break;
       case DELETE:
         text.append("-").append(aDiff.text.length()).append("\t");
         break;
@@ -1491,10 +1487,7 @@ public class diff_match_patch {
         // decode would change all "+" to " "
         param = param.replace("+", "%2B");
         try {
-          param = URLDecoder.decode(param, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
+          param = URLDecoder.decode(param, StandardCharsets.UTF_8);
         } catch (IllegalArgumentException e) {
           // Malformed URI sequence.
           throw new IllegalArgumentException(
@@ -1569,7 +1562,7 @@ public class diff_match_patch {
       // Nothing to match.
       return -1;
     } else if (loc + pattern.length() <= text.length()
-        && text.substring(loc, loc + pattern.length()).equals(pattern)) {
+        && text.startsWith(pattern, loc)) {
       // Perfect match at the perfect spot!  (Includes case of null pattern)
       return loc;
     } else {
@@ -2277,10 +2270,7 @@ public class diff_match_patch {
         line = text.getFirst().substring(1);
         line = line.replace("+", "%2B");  // decode would change all "+" to " "
         try {
-          line = URLDecoder.decode(line, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
+          line = URLDecoder.decode(line, StandardCharsets.UTF_8);
         } catch (IllegalArgumentException e) {
           // Malformed URI sequence.
           throw new IllegalArgumentException(
@@ -2377,13 +2367,8 @@ public class diff_match_patch {
         return false;
       }
       if (text == null) {
-        if (other.text != null) {
-          return false;
-        }
-      } else if (!text.equals(other.text)) {
-        return false;
-      }
-      return true;
+          return other.text == null;
+      } else return text.equals(other.text);
     }
   }
 
@@ -2443,13 +2428,8 @@ public class diff_match_patch {
           text.append(' ');
           break;
         }
-        try {
-          text.append(URLEncoder.encode(aDiff.text, "UTF-8").replace('+', ' '))
+          text.append(URLEncoder.encode(aDiff.text, StandardCharsets.UTF_8).replace('+', ' '))
               .append("\n");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
-        }
       }
       return unescapeForEncodeUriCompatability(text.toString());
     }
